--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+@font-face {
+  font-family: "MuseoSansCyrl";
+  src: url("./assets/fonts/MuseoSansCyrl.otf");
+}
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+  font-family: "MuseoSansCyrl", sans-serif;
+  color: #fff;
+  line-height: 1.2;
+  text-align: center;
   background-image: url("./assets/images/background.png");
   background-position: center;
 }
+
 body {
   margin: 0;
   display: flex;
@@ -133,4 +138,3 @@ label {
 legend {
   display: block;
 }
-
