--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,19 +1,72 @@
 .navbar{
-
+    background-color: rgba(21, 10, 1, 0.212);
+    border-bottom: 1px solid var(--grey);
 }
+
 .navbar_row{
+    max-width: 1200px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+    margin: 0 auto;
+    column-gap: 20px;
+    row-gap: 20px;
+    flex-wrap: wrap;
+    padding: 0  20px;
+}
+
+@media screen and (max-width: 1120px){
+    .navbar_row{
+        justify-content: center;
+    }
 }
 
 .logo{
-    padding: 25px;
+    padding: 25px 20px 40px 30px;
+    position: relative;
+}
+.angle{
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .navbar_list{
     display: flex;
     flex-direction: row;
     column-gap: 45px;
+    row-gap: 30px;
+    flex-wrap: wrap;
 }
+@media screen and (max-width: 780px){
+    .navbar_list{
+        justify-content: center;
+        padding: 0  80px;
+    }
+}
+@media screen and (max-width: 600px){
+    .navbar_list{
+        padding: 0  50px;
+    }
+}
+@media screen and (max-width: 500px){
+    .navbar_list{
+        padding: 0 10px;
+    }
+}
+.navbar_list_item{
+}
+
+.item_link{
+    padding: 15px 0;
+    font-size: 16px;
+    color: var(--light-grey);
+    font-weight: lighter;
+}
+
+.item_link:hover{
+    border-bottom: 1px solid var(--grey);
+    color: var(--grey);
+}
+
