--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,50 @@
 @font-face {
-  font-family: "MuseoSansCyrl";
-  src: url("./assets/fonts/MuseoSansCyrl.otf");
+    font-family: "MuseoSansCyrl";
+    src: url("./assets/fonts/MuseoSansCyrl.otf");
 }
+
 :root {
-  font-family: "MuseoSansCyrl", sans-serif;
-  color: #fff;
-  line-height: 1.2;
-  text-align: center;
-  background-image: url("./assets/images/background.png");
-  background-position: center;
+    /*Colors*/
+    --white: #fff;
+    --black: rgb(21, 10, 1);
+    --grey: #828387;
+    --dark-grey: rgb(61, 61, 61);
+    --light-grey: #cdcbc9;
+
+    font-family: "MuseoSansCyrl", sans-serif;
+    color: var(--white);
+    line-height: 1.375;
+    text-align: left;
 }
 
 body {
-  margin: 0;
-  display: flex;
+    min-height: 100vh;
+    background-image: url("./assets/images/background.png");
+    background-position: center;
+    background-size: cover;
 }
+
 /* Reset and base styles  */
 * {
-  padding: 0;
-  margin: 0;
-  border: none;
+    padding: 0;
+    margin: 0;
+    border: none;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 :focus,
 :active {
-  /*outline: none;*/
+    /*outline: none;*/
 }
 
 a:focus,
 a:active {
-  /* outline: none;*/
+    /* outline: none;*/
 }
 
 /* Links */
@@ -43,14 +52,14 @@ a:active {
 a,
 a:link,
 a:visited {
-  /* color: inherit; */
-  text-decoration: none;
-  /* display: inline-block; */
+    /* color: inherit; */
+    text-decoration: none;
+    /* display: inline-block; */
 }
 
 a:hover {
-  /* color: inherit; */
-  text-decoration: none;
+    /* color: inherit; */
+    text-decoration: none;
 }
 
 /* Common */
@@ -61,7 +70,7 @@ footer,
 header,
 section,
 main {
-  display: block;
+    display: block;
 }
 
 h1,
@@ -71,70 +80,50 @@ h4,
 h5,
 h6,
 p {
-  font-size: inherit;
-  font-weight: inherit;
+    font-size: inherit;
+    font-weight: inherit;
 }
 
 ul,
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 img {
-  vertical-align: top;
+    vertical-align: top;
 }
 
 img,
 svg {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 address {
-  font-style: normal;
+    font-style: normal;
 }
 
-/* Form */
-
-input,
-textarea,
-button,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
+button {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    display: inline-block;
+    box-shadow: none;
+    background: transparent none;
+    cursor: pointer;
 }
 
 input::-ms-clear {
-  display: none;
+    display: none;
 }
 
-button,
-input[type='submit'] {
-  display: inline-block;
-  box-shadow: none;
-  background-color: transparent;
-  background: none;
-  cursor: pointer;
-}
-
-input:focus,
-input:active,
 button:focus,
 button:active {
-  outline: none;
+    outline: none;
 }
 
 button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
+    padding: 0;
+    border: 0;
 }
 
-label {
-  cursor: pointer;
-}
-
-legend {
-  display: block;
-}
