--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -7,18 +7,21 @@
     padding: 0 20px;
     height: 350px;
 }
-@media screen and (max-width: 1280px){
-    .main{
+
+@media screen and (max-width: 1280px) {
+    .main {
         max-width: 1000px;
     }
 }
-@media screen and (max-width: 1024px){
-    .main{
+
+@media screen and (max-width: 1024px) {
+    .main {
         max-width: 800px;
     }
 }
-@media screen and (max-width: 780px){
-    .main{
+
+@media screen and (max-width: 780px) {
+    .main {
         max-width: 700px;
         margin-top: 30px;
         flex-direction: column;
@@ -34,13 +37,14 @@
     flex-direction: column;
     justify-content: space-around;
 }
-@media screen and (max-width: 780px){
-    .header{
+
+@media screen and (max-width: 780px) {
+    .header {
         height: 350px;
     }
 }
 
-.header_text{
+.header_text {
     background: linear-gradient(to right, #fff, #ff440a);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -58,30 +62,50 @@
     line-height: 1.2;
     padding: 10px 0;
 }
-.button_item{
+
+.button_item {
+    width: max-content;
     position: relative;
 }
+
+.button_item:hover img{
+    display: block;
+}
+
 .button {
     font-size: 14px;
     line-height: 1.2;
     color: var(--grey);
     padding: 10px 30px;
+    border: 1px solid;
+    background: transparent;
+    border-image-source: linear-gradient(to bottom left, #275c9e, #09213c, #275c9e);
+    border-image-slice: 1;
 }
+
 .button:hover{
-    border: 1px solid var(--grey);
+    color: var(--white);
 }
-
-.button_glare{
+.blareTop{
     position: absolute;
-    left: 0;
     top: 0;
+    right: 0;
+    transform: translate(47%, -47%);
+    display: none;
 }
-
+.blareBottom{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translate(-47%, 47%);
+    display: none;
+}
 .benefits {
     height: inherit;
 }
-@media screen and (max-width: 780px){
-    .benefits{
+
+@media screen and (max-width: 780px) {
+    .benefits {
         margin-top: 30px;
         height: 350px;
     }
@@ -103,16 +127,18 @@
 .item {
     padding: 30px 35px;
 }
-.item:hover{
+
+.item:hover {
     cursor: pointer;
 }
 
-.item_text{
+.item_text {
     font-size: 18px;
     line-height: 1.2;
     text-align: center;
 }
-.item_number{
+
+.item_number {
     font-size: 46px;
     font-weight: bold;
     text-align: center;
