--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -22,7 +22,17 @@
 
 @media screen and (max-width: 780px) {
     .main {
-        max-width: 700px;
+        max-width: 500px;
+        margin-top: 30px;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        height: 100%;
+    }
+}
+@media screen and (max-width: 520px) {
+    .main {
+        max-width: 400px;
         margin-top: 30px;
         flex-direction: column;
         align-items: center;
@@ -68,7 +78,7 @@
     position: relative;
 }
 
-.button_item:hover img{
+.button_item:hover img {
     display: block;
 }
 
@@ -83,23 +93,26 @@
     border-image-slice: 1;
 }
 
-.button:hover{
+.button:hover {
     color: var(--white);
 }
-.blareTop{
+
+.blareTop {
     position: absolute;
     top: 0;
     right: 0;
     transform: translate(47%, -47%);
     display: none;
 }
-.blareBottom{
+
+.blareBottom {
     position: absolute;
     bottom: 0;
     left: 0;
     transform: translate(-47%, 47%);
     display: none;
 }
+
 .benefits {
     height: inherit;
 }
@@ -110,7 +123,11 @@
         height: 350px;
     }
 }
-
+@media screen and (max-width: 520px) {
+    .benefits {
+        height: 750px;
+    }
+}
 
 .list {
     height: inherit;
@@ -124,8 +141,68 @@
     -webkit-text-fill-color: transparent;
 }
 
+@media screen and (max-width: 780px) {
+    .list {
+        background: linear-gradient(to bottom, #fff, #a3a3a3);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+}
+
+
 .item {
     padding: 30px 35px;
+}
+
+.item1 {
+    background: linear-gradient(to bottom right, transparent, rgba(255, 255, 255, 0.031));
+}
+
+.item2 {
+    background: linear-gradient(to bottom left, rgba(255, 255, 255, 0.031), transparent);
+}
+
+.item3 {
+    background: linear-gradient(to top right, rgba(255, 255, 255, 0.031), transparent);
+}
+
+.item4 {
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.031), transparent);
+}
+
+.item1:hover {
+    background: linear-gradient(to bottom right, transparent, rgba(255, 255, 255, 0.061));
+    border: 1px solid;
+    border-image: linear-gradient(to bottom right, transparent, transparent, transparent, #4c5255 80%) 1;
+}
+
+.item2:hover {
+    background: linear-gradient(to bottom left, rgba(255, 255, 255, 0.061), transparent);
+    border: 1px solid;
+    border-image: linear-gradient(to top right, transparent, transparent, transparent, #4c5255 80%) 1;
+}
+
+.item3:hover {
+    background: linear-gradient(to top right, rgba(255, 255, 255, 0.061), transparent);
+    border: 1px solid;
+    border-image: linear-gradient(to bottom left, transparent, transparent, transparent, #4c5255 80%) 1;
+}
+
+.item4:hover {
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.061), transparent);
+    border: 1px solid;
+    border-image: linear-gradient(to top left, transparent, transparent, transparent, #4c5255 80%) 1;
+}
+@media screen and (max-width: 520px) {
+    .item {
+        background: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.061));
+    }
+
+    .item:hover {
+        background: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.111));
+        border: 1px solid;
+        border-image: linear-gradient(to top, transparent, transparent, transparent, #64241a 80%) 1;
+    }
 }
 
 .item:hover {
