--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "MuseoSansCyrl";
-    src: url("./assets/fonts/MuseoSansCyrl.otf");
+    font-family: 'MuseoSansCyrl';
+    src: url('./assets/fonts/MuseoSansCyrl.otf');
 }
 
 :root {
@@ -11,7 +11,7 @@
     --dark-grey: rgb(61, 61, 61);
     --light-grey: #cdcbc9;
 
-    font-family: "MuseoSansCyrl", sans-serif;
+    font-family: 'MuseoSansCyrl', sans-serif;
     color: var(--white);
     line-height: 1.375;
     text-align: left;
@@ -19,7 +19,7 @@
 
 body {
     min-height: 100vh;
-    background-image: url("./assets/images/background.png");
+    background-image: url('./assets/images/background.png');
     background-position: center;
     background-size: cover;
 }
@@ -125,4 +125,3 @@ button::-moz-focus-inner {
     padding: 0;
     border: 0;
 }
-
