--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -2,4 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
 }
