--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'MuseoSansCyrl';
-    src: url('./assets/fonts/MuseoSansCyrl.otf');
+    src: url('../public/fonts/MuseoSansCyrl.otf');
 }
 
 :root {
